# SKI-safari

src/: CMakeLists.txt  SKI.c  SKIh.h
src/src/objects/: DEC.c  DEC.h  EQU.c  EQU.h  OBS.c  OBS.h  PLR.c  PLR.h  SNC.c  SNC.h
